--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
   </nav>
   <!-- Home-->
-  <section class="home-area element-cover-bg" id="home" style="background-image:url(img/home.jpg)">
+  <section class="home-area element-cover-bg" id="home" style="background-image:url(img/home.webp)">
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center">
         <div class="col-12 col-lg-8 home-content text-center">
@@ -95,7 +95,7 @@
             <div class="info-section single-section">
               <div class="row align-items-center">
                 <!-- Picture part-->
-                <div class="col-12 col-lg-5 info-img"><img class="img-fluid img-thumbnail" src="img/Me.png" alt="About Picture"></div>
+                <div class="col-12 col-lg-5 info-img"><img class="img-fluid img-thumbnail" src="img/Me.webp" alt="About Picture"></div>
                 <!-- Content part-->
                 <div class="col-12 col-lg-7 info-content">
                   <div class="content-block">
