--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
   <!-- Required meta tags-->
   <meta charset="utf-8">
+  <meta name="description" content="Prathewsh S Babu | Full Stack Developer from Kerala, India. Explore my portfolio showcasing my expertise in web development, including PHP, CodeIgniter, jQuery, and more.">
+  <meta name="author" content="Prathewsh S Babu">
+  <meta name="keywords" content="Prathewsh S Babu, Full Stack Developer, Web Developer, PHP, CodeIgniter, jQuery, Kerala, India, Portfolio">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Prathewsh S Babu | Full Stack Developer">
+  <meta property="og:description" content="Explore my portfolio showcasing my expertise in web development, including PHP, CodeIgniter, jQuery, and more.">
   <!-- Title-->
-  <title>Prathewsh</title>
+  <title>Prathewsh S Babu</title>
   <!-- Favicons-->
   <link rel="icon" type="image/png" href="img/favicon.jpg">
   <!-- Web fonts-->
