meta tag update ( 27-07-2024 )

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="description" content="Prathewsh S Babu | Full Stack Developer from Kerala, India. Explore my portfolio showcasing my expertise in web development, including PHP, CodeIgniter, jQuery, and more.">
   <meta name="author" content="Prathewsh S Babu">
-  <meta name="keywords" content="Prathewsh S Babu, Full Stack Developer, Web Developer, PHP, CodeIgniter, jQuery, Kerala, India, Portfolio">
+  <meta name="keywords" content="Prathewsh, Prathewsh S Babu, Full Stack Developer, Web Developer, PHP, CodeIgniter, jQuery, Kerala, India, Portfolio">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="Prathewsh S Babu | Full Stack Developer">
