fixed viewport tag missing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <!-- Required meta tags-->
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Prathewsh S Babu | Full Stack Developer from Kerala, India. Explore my portfolio showcasing my expertise in web development, including PHP, CodeIgniter, jQuery, and more.">
   <meta name="author" content="Prathewsh S Babu">
   <meta name="keywords" content="Prathewsh, Prathewsh S Babu, Full Stack Developer, Web Developer, PHP, CodeIgniter, jQuery, Kerala, India, full stack developer in kerala, best full stack developer in kerala, best web developer in kerala">
