removed gamer text from slider

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="row h-100 align-items-center justify-content-center">
         <div class="col-12 col-lg-8 home-content text-center">
           <h1 class="home-name"><span>PRATHEWSH</span></h1>
-          <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Designer</b><b>Developer</b><b>Gamer</b><b>Digital Artist</b></span></h4>
+          <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Designer</b><b>Developer</b><b>Digital Artist</b></span></h4>
         </div>
       </div>
     </div>
