--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       >
         <!-- Navbar menu-->
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+          <li class="nav-item d-none d-lg-block">
             <a class="nav-link" href="#resume">Resume</a>
           </li>
           <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
@@ -436,11 +436,32 @@
                   </div>
                 </div>
               </div>
+              <div
+                style="
+                  margin: 0;
+                  padding: 0;
+                  height: 193vh;
+                  width: calc(100% + 100px);
+                  overflow: hidden;
+                "
+                class="resume-section single-section"
+              >
+                <iframe
+                  src="./CV/index.html"
+                  style="
+                    width: 100%;
+                    height: 100%;
+                    border: none;
+                    display: block;
+                    overflow: hidden;
+                  "
+                ></iframe>
+              </div>
               <!-- Resume section-->
-              <div class="resume-section single-section">
-                <div class="row">
-                  <!-- Education part-->
-                  <div class="col-12 col-md-6">
+              <!-- <div class="resume-section single-section">
+                <div class="row"> -->
+              <!-- Education part-->
+              <!-- <div class="col-12 col-md-6">
                     <div class="col-block education">
                       <h3 class="col-title">Education</h3>
                       <div class="resume-item">
@@ -461,15 +482,15 @@
                           2010</span
                         >
                         <p>Computer Science</p>
-                      </div>
-                      <!-- <div class="resume-item"><span class="item-arrow"></span>
+                      </div> -->
+              <!-- <div class="resume-item"><span class="item-arrow"></span>
                       <h5 class="item-title">Master Degree</h5><span class="item-details">Harvard University / 2012 - 2015</span>
                       <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
                     </div> -->
-                    </div>
-                  </div>
-                  <!-- Experience part-->
-                  <div class="col-12 col-md-6">
+              <!-- </div>
+                  </div> -->
+              <!-- Experience part-->
+              <!-- <div class="col-12 col-md-6">
                     <div class="col-block experience">
                       <h3 class="col-title">Experience</h3>
                       <div class="resume-item">
@@ -512,9 +533,9 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- Skills section-->
-              <div class="skills-section single-section">
+              <!-- <div class="skills-section single-section">
                 <div class="row">
                   <div class="col-12">
                     <div class="section-heading">
@@ -587,7 +608,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- Video section-->
               <!-- <div class="video-section single-section">
               <div class="row align-items-center">
